<resources>
    <string name="app_name">SƠN NGUYỄN</string>
    <string name="lbl_sotien">Số Tiền</string>
    <string name="lbl_donhang">DEMO ANDROID</string>
    <string name="btn_create_order">Tạo Đơn Hàng</string>
    <string name="txt_amount_init"></string>
    <string name="txt_amount_hint">VNĐ</string>
    <string name="btn_pay">Thanh Toán</string>
    <string name="lbl_zptranstoken">zptranstoken</string>
    <string name="to_webview">To WebView</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
