<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/lbl_sotien"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/lbl_donhang"
        android:textColor="#F7121111"
        android:textColorLink="#AE2222"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/txt_amount_hint"
        android:inputType="number"
        android:text="@string/txt_amount_init"
        android:textAlignment="center"
        android:textColor="#D51212"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toEndOf="@+id/txtSoTien"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtSoTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:background="#00BCD4"
        android:text="@string/lbl_sotien"
        android:textColor="#0C0E0E"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btnCreateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_create_order"
        android:textColor="#131212"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSoTien" />

    <TextView
        android:id="@+id/lblZpTransToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/lbl_zptranstoken"
        android:textColor="#0C0B0B"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateOrder" />

    <TextView
        android:id="@+id/txtToken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:textColor="#E10C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblZpTransToken"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateOrder" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="#2196F3"
        android:text="@string/btn_pay"
        android:textSize="26sp"
        android:textStyle="bold"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtToken" />

    <Button
        android:id="@+id/btnTowebview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#BCAE34"
        android:text="@string/to_webview"
        android:textColor="#BC1717"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPay" />

</androidx.constraintlayout.widget.ConstraintLayout>